packages/typ/tests/fixtures/diagnostics/0941_gadt_constructor_payload_int_mismatch_09.ml.infer.expected
File "0941_gadt_constructor_payload_int_mismatch_09.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0941_gadt_constructor_payload_int_mismatch_09 is not a valid module name.

File "0941_gadt_constructor_payload_int_mismatch_09.ml", line 5, characters 34-38:
5 | let _ : int expr_iota = EInt_iota true
                                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
