packages/typ/tests/fixtures/diagnostics/0941_gadt_constructor_payload_int_mismatch_09.ml
type _ expr_iota =
  | EInt_iota : int -> int expr_iota
  | EBool_iota : bool -> bool expr_iota

let _ : int expr_iota = EInt_iota true
